# stm32-cloudbuster

./: Makefile  README.md  external.desc  external.mk  toolchain.cmake
board/stmicroelectronics/stm32mp157a-dk1/: genimage.cfg.template  linux-custom-dts.sh  linux.config  post-image.sh  uboot-env.txt
board/stmicroelectronics/stm32mp157a-dk1/dts/: stm32mp157a-dk1-cloudbuster.dts
board/stmicroelectronics/stm32mp157a-dk1/dts-tree/st/: stm32mp157a-dk1-cloudbuster.dts
board/stmicroelectronics/stm32mp157a-dk1/overlay/boot/extlinux/: extlinux.conf
board/stmicroelectronics/stm32mp157a-dk1/overlay/etc/init.d/: S10tmpfs  S20samples  S41network  S50sshd  S60audio  S70cloudbuster  S80stm32-controls
board/stmicroelectronics/stm32mp157a-dk1/overlay/etc/ssh/: sshd_config
board/stmicroelectronics/stm32mp157a-dk1/overlay/root/: cloudbuster  run_cloudbuster.sh  stm32-controls
board/stmicroelectronics/stm32mp157a-dk1/patches/linux/: 0001-add-adc-arduino-a0.patch  0001-add-aip31068-lcd-driver.patch
configs/: stm32mp157a_dk1_cloudbuster_defconfig
src/aip31068/: aip31068.c
src/stm32-controls/: CMakeLists.txt  main.c
src/stm32-controls/build-arm/: CMakeCache.txt  Makefile  cmake_install.cmake
